--- a/package.json
+++ b/package.json
@@ -31,14 +31,18 @@
         "@remix-run/react": "2.6.0",
         "@remix-run/serve": "2.6.0",
         "@tailwindcss/aspect-ratio": "0.4.2",
+        "date-fns": "3.3.1",
         "isbot": "4.4.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "satori": "0.10.13",
+        "shiki": "1.1.3",
         "tailwind-merge": "2.2.1",
         "zod": "3.22.4"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.5.2",
+        "@mdx-js/rollup": "3.0.1",
         "@remix-run/dev": "2.6.0",
         "@remix-run/eslint-config": "2.6.0",
         "@remix-run/testing": "2.6.0",
@@ -99,6 +103,8 @@
         "postcss-import": "16.0.1",
         "prettier": "3.2.5",
         "prettier-plugin-tailwindcss": "0.5.11",
+        "remark-frontmatter": "5.0.0",
+        "remark-mdx-frontmatter": "4.0.0",
         "remix-flat-routes": "0.6.4",
         "storybook": "^7.6.15",
         "storybook-dark-mode": "3.0.3",
