--- a/package.json
+++ b/package.json
@@ -103,9 +103,16 @@
         "postcss-import": "16.0.1",
         "prettier": "3.2.5",
         "prettier-plugin-tailwindcss": "0.5.11",
+        "rehype-autolink-headings": "7.1.0",
         "rehype-pretty-code": "0.13.0",
+        "rehype-slug": "6.0.0",
+        "rehype-stringify": "10.0.0",
         "remark-frontmatter": "5.0.0",
+        "remark-gfm": "4.0.0",
+        "remark-html": "16.0.1",
         "remark-mdx-frontmatter": "4.0.0",
+        "remark-parse": "11.0.0",
+        "remark-rehype": "11.1.0",
         "remix-flat-routes": "0.6.4",
         "storybook": "^7.6.15",
         "storybook-dark-mode": "3.0.3",
@@ -117,6 +124,7 @@
         "stylelint-order": "6.0.4",
         "tailwindcss": "3.4.1",
         "typescript": "5.3.3",
+        "unified": "11.0.4",
         "vite": "5.1.2",
         "vite-plugin-turbosnap": "1.0.3",
         "vite-tsconfig-paths": "4.3.1",
