--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
         "@remix-run/serve": "2.6.0",
         "@tailwindcss/aspect-ratio": "0.4.2",
         "date-fns": "3.3.1",
+        "i18next": "23.8.3",
+        "i18next-browser-languagedetector": "7.2.0",
         "isbot": "4.4.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-i18next": "14.0.5",
+        "remix-i18next": "5.5.0",
         "satori": "0.10.13",
         "shiki": "1.1.3",
         "tailwind-merge": "2.2.1",
@@ -124,8 +128,8 @@
         "stylelint-order": "6.0.4",
         "tailwindcss": "3.4.1",
         "typescript": "5.3.3",
-        "unified": "11.0.4",
         "vite": "5.1.2",
+        "vite-plugin-cjs-interop": "^2.0.6",
         "vite-plugin-turbosnap": "1.0.3",
         "vite-tsconfig-paths": "4.3.1",
         "vitest": "1.2.2"
