--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "dependencies": {
         "@docsearch/css": "3.5.2",
         "@docsearch/react": "3.5.2",
+        "@fortawesome/fontawesome-svg-core": "6.5.1",
+        "@fortawesome/free-brands-svg-icons": "6.5.1",
+        "@fortawesome/free-regular-svg-icons": "6.5.1",
+        "@fortawesome/free-solid-svg-icons": "6.5.1",
+        "@fortawesome/react-fontawesome": "0.2.0",
         "@remix-run/css-bundle": "2.6.0",
         "@remix-run/node": "2.6.0",
         "@remix-run/react": "2.6.0",
