--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@remix-run/serve": "2.6.0",
         "@tailwindcss/aspect-ratio": "0.4.2",
         "date-fns": "3.3.1",
+        "dotenv": "16.4.4",
         "isbot": "5.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
