--- a/package.json
+++ b/package.json
@@ -24,34 +24,32 @@
         "build-storybook": "cross-env SB=1 storybook build --test"
     },
     "dependencies": {
-        "@docsearch/css": "3.5.2",
-        "@docsearch/react": "3.5.2",
         "@fortawesome/fontawesome-svg-core": "6.5.1",
         "@fortawesome/free-brands-svg-icons": "6.5.1",
         "@fortawesome/free-regular-svg-icons": "6.5.1",
         "@fortawesome/free-solid-svg-icons": "6.5.1",
         "@fortawesome/react-fontawesome": "0.2.0",
-        "@remix-run/css-bundle": "2.6.0",
-        "@remix-run/node": "2.6.0",
-        "@remix-run/react": "2.6.0",
-        "@remix-run/serve": "2.6.0",
+        "@remix-run/css-bundle": "2.7.2",
+        "@remix-run/node": "2.7.2",
+        "@remix-run/react": "2.7.2",
+        "@remix-run/serve": "2.7.2",
         "@tailwindcss/aspect-ratio": "0.4.2",
         "date-fns": "3.3.1",
-        "dotenv": "16.4.4",
-        "isbot": "5.1.0",
+        "dotenv": "16.4.5",
+        "isbot": "5.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "satori": "0.10.13",
-        "shiki": "1.1.5",
+        "shiki": "1.1.7",
         "tailwind-merge": "2.2.1",
         "zod": "3.22.4"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.5.2",
         "@mdx-js/rollup": "3.0.1",
-        "@remix-run/dev": "2.6.0",
-        "@remix-run/eslint-config": "2.6.0",
-        "@remix-run/testing": "2.6.0",
+        "@remix-run/dev": "2.7.2",
+        "@remix-run/eslint-config": "2.7.2",
+        "@remix-run/testing": "2.7.2",
         "@storybook/addon-essentials": "^7.6.15",
         "@storybook/addon-interactions": "^7.6.15",
         "@storybook/addon-links": "^7.6.15",
@@ -65,17 +63,17 @@
         "@testing-library/jest-dom": "6.4.2",
         "@testing-library/react": "14.2.1",
         "@testing-library/user-event": "14.5.2",
-        "@types/eslint": "8.56.2",
-        "@types/react": "18.2.56",
+        "@types/eslint": "8.56.4",
+        "@types/react": "18.2.60",
         "@types/react-dom": "18.2.19",
         "@vitejs/plugin-react": "4.2.1",
-        "@vitest/coverage-v8": "1.3.0",
+        "@vitest/coverage-v8": "1.3.1",
         "autoprefixer": "10.4.17",
-        "chromatic": "10.9.6",
+        "chromatic": "11.0.0",
         "cross-env": "7.0.3",
-        "cssnano": "6.0.3",
+        "cssnano": "6.0.5",
         "dotenv-cli": "7.3.0",
-        "eslint": "8.56.0",
+        "eslint": "8.57.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-airbnb-typescript": "17.0.0",
         "eslint-config-prettier": "9.1.0",
@@ -94,14 +92,14 @@
         "eslint-plugin-sort-keys-fix": "1.1.2",
         "eslint-plugin-sort-react-dependency-arrays": "0.3.0",
         "eslint-plugin-storybook": "0.8.0",
-        "eslint-plugin-tailwindcss": "3.14.2",
+        "eslint-plugin-tailwindcss": "3.14.3",
         "eslint-plugin-testing-library": "6.2.0",
         "eslint-plugin-typescript-sort-keys": "2.3.0",
         "eslint-plugin-unicorn": "51.0.1",
         "eslint-plugin-vitest": "0.3.22",
         "eslint-plugin-vitest-globals": "1.4.0",
         "eslint-plugin-you-dont-need-lodash-underscore": "6.13.0",
-        "happy-dom": "13.3.8",
+        "happy-dom": "13.6.2",
         "husky": "9.0.11",
         "is-ci": "3.0.1",
         "lint-staged": "15.2.2",
@@ -119,6 +117,7 @@
         "remark-mdx-frontmatter": "4.0.0",
         "remark-parse": "11.0.0",
         "remark-rehype": "11.1.0",
+        "remix-development-tools": "3.7.4",
         "remix-flat-routes": "0.6.4",
         "storybook": "^7.6.15",
         "storybook-dark-mode": "3.0.3",
@@ -131,13 +130,13 @@
         "tailwindcss": "3.4.1",
         "typescript": "5.3.3",
         "unified": "11.0.4",
-        "vite": "5.1.3",
+        "vite": "5.1.4",
         "vite-plugin-turbosnap": "1.0.3",
         "vite-tsconfig-paths": "4.3.1",
-        "vitest": "1.3.0"
+        "vitest": "1.3.1"
     },
     "overrides": {
-        "vite": "5.1.3"
+        "vite": "5.1.4"
     },
     "engines": {
         "node": ">=20"
