--- a/package.json
+++ b/package.json
@@ -45,17 +45,17 @@
         "zod": "3.22.4"
     },
     "devDependencies": {
-        "@flydotio/dockerfile": "^0.5.2",
+        "@flydotio/dockerfile": "0.5.2",
         "@mdx-js/rollup": "3.0.1",
         "@remix-run/dev": "2.8.0",
         "@remix-run/eslint-config": "2.8.0",
         "@remix-run/testing": "2.8.0",
-        "@storybook/addon-essentials": "^7.6.15",
-        "@storybook/addon-interactions": "^7.6.15",
-        "@storybook/addon-links": "^7.6.15",
-        "@storybook/blocks": "^7.6.15",
-        "@storybook/react": "^7.6.15",
-        "@storybook/react-vite": "^7.6.15",
+        "@storybook/addon-essentials": "7.6.17",
+        "@storybook/addon-interactions": "7.6.17",
+        "@storybook/addon-links": "7.6.17",
+        "@storybook/blocks": "7.6.17",
+        "@storybook/react": "7.6.17",
+        "@storybook/react-vite": "7.6.17",
         "@storybook/testing-library": "0.2.2",
         "@tailwindcss/forms": "0.5.7",
         "@tailwindcss/typography": "0.5.10",
@@ -64,14 +64,14 @@
         "@testing-library/react": "14.2.1",
         "@testing-library/user-event": "14.5.2",
         "@types/eslint": "8.56.5",
-        "@types/react": "18.2.60",
-        "@types/react-dom": "18.2.19",
+        "@types/react": "18.2.64",
+        "@types/react-dom": "18.2.21",
         "@vitejs/plugin-react": "4.2.1",
         "@vitest/coverage-v8": "1.3.1",
-        "autoprefixer": "10.4.17",
-        "chromatic": "11.0.0",
+        "autoprefixer": "10.4.18",
+        "chromatic": "11.0.4",
         "cross-env": "7.0.3",
-        "cssnano": "6.0.5",
+        "cssnano": "6.1.0",
         "dotenv-cli": "7.3.0",
         "eslint": "8.57.0",
         "eslint-config-airbnb": "19.0.4",
@@ -106,7 +106,7 @@
         "postcss": "8.4.35",
         "postcss-import": "16.0.1",
         "prettier": "3.2.5",
-        "prettier-plugin-tailwindcss": "0.5.11",
+        "prettier-plugin-tailwindcss": "0.5.12",
         "rehype-autolink-headings": "7.1.0",
         "rehype-pretty-code": "0.13.0",
         "rehype-slug": "6.0.0",
@@ -119,7 +119,7 @@
         "remark-rehype": "11.1.0",
         "remix-development-tools": "3.7.4",
         "remix-flat-routes": "0.6.4",
-        "storybook": "^7.6.15",
+        "storybook": "7.6.17",
         "storybook-dark-mode": "3.0.3",
         "storybook-react-i18next": "2.0.10",
         "stylelint": "16.2.1",
@@ -128,15 +128,15 @@
         "stylelint-config-tailwindcss": "0.0.7",
         "stylelint-order": "6.0.4",
         "tailwindcss": "3.4.1",
-        "typescript": "5.3.3",
+        "typescript": "5.4.2",
         "unified": "11.0.4",
-        "vite": "5.1.4",
+        "vite": "5.1.5",
         "vite-plugin-turbosnap": "1.0.3",
         "vite-tsconfig-paths": "4.3.1",
         "vitest": "1.3.1"
     },
     "overrides": {
-        "vite": "5.1.4"
+        "vite": "5.1.5"
     },
     "engines": {
         "node": ">=20"
