--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "build-storybook": "cross-env SB=1 storybook build --test"
     },
     "dependencies": {
+        "@apollo/client": "3.9.6",
         "@fortawesome/fontawesome-svg-core": "6.5.1",
         "@fortawesome/free-brands-svg-icons": "6.5.1",
         "@fortawesome/free-regular-svg-icons": "6.5.1",
@@ -36,17 +37,27 @@
         "@tailwindcss/aspect-ratio": "0.4.2",
         "date-fns": "3.3.1",
         "dotenv": "16.4.5",
+        "graphql": "16.8.1",
         "isbot": "5.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "rehype-autolink-headings": "7.1.0",
+        "rehype-pretty-code": "0.13.0",
+        "rehype-slug": "6.0.0",
+        "rehype-stringify": "10.0.0",
+        "remark-frontmatter": "5.0.0",
+        "remark-gfm": "4.0.0",
+        "remark-mdx-frontmatter": "4.0.0",
+        "remark-parse": "11.0.0",
+        "remark-rehype": "11.1.0",
         "satori": "0.10.13",
         "shiki": "1.1.7",
         "tailwind-merge": "2.2.1",
+        "unified": "11.0.4",
         "zod": "3.22.4"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "0.5.2",
-        "@mdx-js/rollup": "3.0.1",
         "@remix-run/dev": "2.8.0",
         "@remix-run/eslint-config": "2.8.0",
         "@remix-run/testing": "2.8.0",
@@ -107,16 +118,6 @@
         "postcss-import": "16.0.1",
         "prettier": "3.2.5",
         "prettier-plugin-tailwindcss": "0.5.12",
-        "rehype-autolink-headings": "7.1.0",
-        "rehype-pretty-code": "0.13.0",
-        "rehype-slug": "6.0.0",
-        "rehype-stringify": "10.0.0",
-        "remark-frontmatter": "5.0.0",
-        "remark-gfm": "4.0.0",
-        "remark-html": "16.0.1",
-        "remark-mdx-frontmatter": "4.0.0",
-        "remark-parse": "11.0.0",
-        "remark-rehype": "11.1.0",
         "remix-development-tools": "3.7.4",
         "remix-flat-routes": "0.6.4",
         "storybook": "7.6.17",
@@ -129,7 +130,6 @@
         "stylelint-order": "6.0.4",
         "tailwindcss": "3.4.1",
         "typescript": "5.4.2",
-        "unified": "11.0.4",
         "vite": "5.1.5",
         "vite-plugin-turbosnap": "1.0.3",
         "vite-tsconfig-paths": "4.3.1",
