feat: update libs, remove icons from tags, fix storybook

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "build-storybook": "cross-env SB=1 storybook build --test"
     },
     "dependencies": {
-        "@apollo/client": "3.9.6",
         "@fortawesome/fontawesome-svg-core": "6.5.1",
         "@fortawesome/free-brands-svg-icons": "6.5.1",
         "@fortawesome/free-regular-svg-icons": "6.5.1",
@@ -34,10 +33,10 @@
         "@remix-run/node": "2.8.1",
         "@remix-run/react": "2.8.1",
         "@remix-run/serve": "2.8.1",
+        "@storybook/test": "^8.0.0",
         "@tailwindcss/aspect-ratio": "0.4.2",
-        "date-fns": "3.3.1",
+        "date-fns": "3.6.0",
         "dotenv": "16.4.5",
-        "graphql": "16.8.1",
         "isbot": "5.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -51,23 +50,22 @@
         "remark-parse": "11.0.0",
         "remark-rehype": "11.1.0",
         "satori": "0.10.13",
-        "shiki": "1.1.7",
-        "tailwind-merge": "2.2.1",
+        "shiki": "1.2.0",
+        "tailwind-merge": "2.2.2",
         "unified": "11.0.4",
         "zod": "3.22.4"
     },
     "devDependencies": {
-        "@flydotio/dockerfile": "0.5.2",
+        "@flydotio/dockerfile": "0.5.3",
         "@remix-run/dev": "2.8.1",
         "@remix-run/eslint-config": "2.8.1",
         "@remix-run/testing": "2.8.1",
-        "@storybook/addon-essentials": "7.6.17",
-        "@storybook/addon-interactions": "7.6.17",
-        "@storybook/addon-links": "7.6.17",
-        "@storybook/blocks": "7.6.17",
-        "@storybook/react": "7.6.17",
-        "@storybook/react-vite": "7.6.17",
-        "@storybook/testing-library": "0.2.2",
+        "@storybook/addon-essentials": "^8.0.0",
+        "@storybook/addon-interactions": "^8.0.0",
+        "@storybook/addon-links": "^8.0.0",
+        "@storybook/blocks": "^8.0.0",
+        "@storybook/react": "^8.0.0",
+        "@storybook/react-vite": "^8.0.0",
         "@tailwindcss/forms": "0.5.7",
         "@tailwindcss/typography": "0.5.10",
         "@testing-library/dom": "9.3.4",
@@ -75,12 +73,12 @@
         "@testing-library/react": "14.2.1",
         "@testing-library/user-event": "14.5.2",
         "@types/eslint": "8.56.5",
-        "@types/react": "18.2.64",
-        "@types/react-dom": "18.2.21",
+        "@types/react": "18.2.66",
+        "@types/react-dom": "18.2.22",
         "@vitejs/plugin-react": "4.2.1",
-        "@vitest/coverage-v8": "1.3.1",
+        "@vitest/coverage-v8": "1.4.0",
         "autoprefixer": "10.4.18",
-        "chromatic": "11.0.7",
+        "chromatic": "11.0.8",
         "cross-env": "7.0.3",
         "cssnano": "6.1.0",
         "dotenv-cli": "7.4.1",
@@ -103,26 +101,26 @@
         "eslint-plugin-sort-keys-fix": "1.1.2",
         "eslint-plugin-sort-react-dependency-arrays": "0.3.0",
         "eslint-plugin-storybook": "0.8.0",
-        "eslint-plugin-tailwindcss": "3.14.3",
+        "eslint-plugin-tailwindcss": "3.15.1",
         "eslint-plugin-testing-library": "6.2.0",
         "eslint-plugin-typescript-sort-keys": "2.3.0",
         "eslint-plugin-unicorn": "51.0.1",
-        "eslint-plugin-vitest": "0.3.25",
-        "eslint-plugin-vitest-globals": "1.4.0",
+        "eslint-plugin-vitest": "0.3.26",
+        "eslint-plugin-vitest-globals": "1.5.0",
         "eslint-plugin-you-dont-need-lodash-underscore": "6.13.0",
-        "happy-dom": "13.7.3",
+        "happy-dom": "13.9.0",
         "husky": "9.0.11",
         "is-ci": "3.0.1",
         "lint-staged": "15.2.2",
-        "postcss": "8.4.35",
+        "postcss": "8.4.36",
         "postcss-import": "16.0.1",
         "prettier": "3.2.5",
         "prettier-plugin-tailwindcss": "0.5.12",
-        "remix-development-tools": "4.0.0",
+        "remix-development-tools": "4.0.8",
         "remix-flat-routes": "0.6.4",
-        "storybook": "7.6.17",
-        "storybook-dark-mode": "3.0.3",
-        "storybook-react-i18next": "2.0.10",
+        "storybook": "^8.0.0",
+        "storybook-dark-mode": "^4.0.0",
+        "storybook-react-i18next": "^3.0.1",
         "stylelint": "16.2.1",
         "stylelint-config-idiomatic-order": "10.0.0",
         "stylelint-config-standard": "36.0.0",
@@ -130,15 +128,16 @@
         "stylelint-order": "6.0.4",
         "tailwindcss": "3.4.1",
         "typescript": "5.4.2",
-        "vite": "5.1.5",
+        "vite": "5.1.6",
         "vite-plugin-turbosnap": "1.0.3",
-        "vite-tsconfig-paths": "4.3.1",
-        "vitest": "1.3.1"
+        "vite-tsconfig-paths": "4.3.2",
+        "vitest": "1.4.0"
     },
     "overrides": {
-        "vite": "5.1.5"
+        "vite": "5.1.6"
     },
     "engines": {
         "node": ">=20"
-    }
+    },
+    "packageManager": "pnpm@8.1.0+sha1.09ebf306075e96037432071992bb00340c263d85"
 }
