--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "build-storybook": "cross-env SB=1 storybook build --test"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.5.1",
-    "@fortawesome/free-brands-svg-icons": "6.5.1",
-    "@fortawesome/free-regular-svg-icons": "6.5.1",
-    "@fortawesome/free-solid-svg-icons": "6.5.1",
+    "@fortawesome/fontawesome-svg-core": "6.5.2",
+    "@fortawesome/free-brands-svg-icons": "6.5.2",
+    "@fortawesome/free-regular-svg-icons": "6.5.2",
+    "@fortawesome/free-solid-svg-icons": "6.5.2",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@remix-run/css-bundle": "2.8.1",
     "@remix-run/node": "2.8.1",
     "@remix-run/react": "2.8.1",
     "@remix-run/serve": "2.8.1",
-    "@storybook/test": "^8.0.5",
+    "@storybook/test": "8.0.6",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
-    "isbot": "5.1.3",
+    "isbot": "5.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "7.1.0",
@@ -50,7 +50,7 @@
     "remark-parse": "11.0.0",
     "remark-rehype": "11.1.0",
     "satori": "0.10.13",
-    "shiki": "1.2.3",
+    "shiki": "1.3.0",
     "tailwind-merge": "2.2.2",
     "unified": "11.0.4",
     "zod": "3.22.4"
@@ -60,21 +60,21 @@
     "@remix-run/dev": "2.8.1",
     "@remix-run/eslint-config": "2.8.1",
     "@remix-run/testing": "2.8.1",
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-interactions": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
-    "@storybook/blocks": "^8.0.5",
-    "@storybook/react": "^8.0.5",
-    "@storybook/react-vite": "^8.0.5",
+    "@storybook/addon-essentials": "8.0.6",
+    "@storybook/addon-interactions": "8.0.6",
+    "@storybook/addon-links": "8.0.6",
+    "@storybook/blocks": "8.0.6",
+    "@storybook/react": "8.0.6",
+    "@storybook/react-vite": "8.0.6",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.12",
     "@testing-library/dom": "9.3.4",
     "@testing-library/jest-dom": "6.4.2",
-    "@testing-library/react": "14.2.2",
+    "@testing-library/react": "14.3.0",
     "@testing-library/user-event": "14.5.2",
     "@types/eslint": "8.56.7",
-    "@types/react": "18.2.73",
-    "@types/react-dom": "18.2.23",
+    "@types/react": "18.2.75",
+    "@types/react-dom": "18.2.24",
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.4.0",
     "autoprefixer": "10.4.19",
@@ -96,7 +96,7 @@
     "eslint-plugin-no-switch-statements": "1.0.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-simple-import-sort": "12.0.0",
-    "eslint-plugin-sonarjs": "0.25.0",
+    "eslint-plugin-sonarjs": "0.25.1",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-sort-react-dependency-arrays": "0.3.0",
@@ -105,10 +105,10 @@
     "eslint-plugin-testing-library": "6.2.0",
     "eslint-plugin-typescript-sort-keys": "2.3.0",
     "eslint-plugin-unicorn": "51.0.1",
-    "eslint-plugin-vitest": "0.4.1",
+    "eslint-plugin-vitest": "0.5.1",
     "eslint-plugin-vitest-globals": "1.5.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "6.13.0",
-    "happy-dom": "14.3.10",
+    "eslint-plugin-you-dont-need-lodash-underscore": "6.14.0",
+    "happy-dom": "14.7.1",
     "husky": "9.0.11",
     "is-ci": "3.0.1",
     "lint-staged": "15.2.2",
@@ -118,23 +118,23 @@
     "prettier-plugin-tailwindcss": "0.5.13",
     "remix-development-tools": "4.1.4",
     "remix-flat-routes": "0.6.4",
-    "storybook": "^8.0.5",
+    "storybook": "8.0.6",
     "storybook-dark-mode": "4.0.1",
-    "storybook-react-i18next": "^3.0.1",
+    "storybook-react-i18next": "3.0.1",
     "stylelint": "16.3.1",
     "stylelint-config-idiomatic-order": "10.0.0",
     "stylelint-config-standard": "36.0.0",
     "stylelint-config-tailwindcss": "0.0.7",
     "stylelint-order": "6.0.4",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.3",
-    "vite": "5.2.7",
+    "typescript": "5.4.4",
+    "vite": "5.2.8",
     "vite-plugin-turbosnap": "1.0.3",
     "vite-tsconfig-paths": "4.3.2",
     "vitest": "1.4.0"
   },
   "overrides": {
-    "vite": "5.2.7"
+    "vite": "5.2.8"
   },
   "engines": {
     "node": ">=20"
