--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@remix-run/node": "2.8.1",
     "@remix-run/react": "2.8.1",
     "@remix-run/serve": "2.8.1",
-    "@storybook/test": "8.0.6",
+    "@storybook/test": "^8.0.8",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
@@ -56,27 +56,28 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.2",
     "@flydotio/dockerfile": "0.5.4",
     "@remix-run/dev": "2.8.1",
     "@remix-run/eslint-config": "2.8.1",
     "@remix-run/testing": "2.8.1",
-    "@storybook/addon-essentials": "8.0.6",
-    "@storybook/addon-interactions": "8.0.6",
-    "@storybook/addon-links": "8.0.6",
-    "@storybook/blocks": "8.0.6",
-    "@storybook/react": "8.0.6",
-    "@storybook/react-vite": "8.0.6",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-vite": "^8.0.8",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.12",
     "@testing-library/dom": "9.3.4",
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.3.0",
     "@testing-library/user-event": "14.5.2",
-    "@types/eslint": "8.56.7",
-    "@types/react": "18.2.75",
-    "@types/react-dom": "18.2.24",
+    "@types/eslint": "8.56.9",
+    "@types/react": "18.2.78",
+    "@types/react-dom": "18.2.25",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitest/coverage-v8": "1.4.0",
+    "@vitest/coverage-v8": "1.5.0",
     "autoprefixer": "10.4.19",
     "chromatic": "11.3.0",
     "cross-env": "7.0.3",
@@ -95,19 +96,19 @@
     "eslint-plugin-mdx": "3.1.5",
     "eslint-plugin-no-switch-statements": "1.0.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-simple-import-sort": "12.0.0",
+    "eslint-plugin-simple-import-sort": "12.1.0",
     "eslint-plugin-sonarjs": "0.25.1",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-sort-react-dependency-arrays": "0.3.0",
     "eslint-plugin-storybook": "0.8.0",
     "eslint-plugin-tailwindcss": "3.15.1",
-    "eslint-plugin-testing-library": "6.2.0",
+    "eslint-plugin-testing-library": "6.2.1",
     "eslint-plugin-typescript-sort-keys": "2.3.0",
     "eslint-plugin-unicorn": "51.0.1",
     "eslint-plugin-vitest": "0.4.1",
     "eslint-plugin-vitest-globals": "1.5.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "6.13.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "6.14.0",
     "happy-dom": "14.7.1",
     "husky": "9.0.11",
     "is-ci": "3.0.1",
@@ -118,7 +119,7 @@
     "prettier-plugin-tailwindcss": "0.5.13",
     "remix-development-tools": "4.1.4",
     "remix-flat-routes": "0.6.4",
-    "storybook": "8.0.6",
+    "storybook": "^8.0.8",
     "storybook-dark-mode": "4.0.1",
     "storybook-react-i18next": "3.0.1",
     "stylelint": "16.3.1",
@@ -127,11 +128,11 @@
     "stylelint-config-tailwindcss": "0.0.7",
     "stylelint-order": "6.0.4",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.4",
+    "typescript": "5.4.5",
     "vite": "5.2.8",
     "vite-plugin-turbosnap": "1.0.3",
     "vite-tsconfig-paths": "4.3.2",
-    "vitest": "1.4.0"
+    "vitest": "1.5.0"
   },
   "overrides": {
     "vite": "5.2.8"
