--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.2",
-    "@flydotio/dockerfile": "0.5.4",
+    "@chromatic-com/storybook": "1.3.3",
+    "@flydotio/dockerfile": "0.5.5",
     "@remix-run/dev": "2.8.1",
     "@remix-run/eslint-config": "2.8.1",
     "@remix-run/testing": "2.8.1",
@@ -74,7 +74,7 @@
     "@testing-library/react": "14.3.0",
     "@testing-library/user-event": "14.5.2",
     "@types/eslint": "8.56.9",
-    "@types/react": "18.2.78",
+    "@types/react": "18.2.79",
     "@types/react-dom": "18.2.25",
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.5.0",
@@ -103,7 +103,7 @@
     "eslint-plugin-sort-react-dependency-arrays": "0.3.0",
     "eslint-plugin-storybook": "0.8.0",
     "eslint-plugin-tailwindcss": "3.15.1",
-    "eslint-plugin-testing-library": "6.2.1",
+    "eslint-plugin-testing-library": "6.2.2",
     "eslint-plugin-typescript-sort-keys": "2.3.0",
     "eslint-plugin-unicorn": "51.0.1",
     "eslint-plugin-vitest": "0.4.1",
@@ -116,7 +116,7 @@
     "postcss": "8.4.38",
     "postcss-import": "16.1.0",
     "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.13",
+    "prettier-plugin-tailwindcss": "0.5.14",
     "remix-development-tools": "4.1.4",
     "remix-flat-routes": "0.6.4",
     "storybook": "^8.0.8",
@@ -129,13 +129,13 @@
     "stylelint-order": "6.0.4",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5",
-    "vite": "5.2.8",
+    "vite": "5.2.9",
     "vite-plugin-turbosnap": "1.0.3",
     "vite-tsconfig-paths": "4.3.2",
     "vitest": "1.5.0"
   },
   "overrides": {
-    "vite": "5.2.8"
+    "vite": "5.2.9"
   },
   "engines": {
     "node": ">=20"
