--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@remix-run/node": "2.9.1",
     "@remix-run/react": "2.9.1",
     "@remix-run/serve": "2.9.1",
-    "@storybook/test": "^8.0.9",
+    "@storybook/test": "8.0.9",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
@@ -61,12 +61,12 @@
     "@remix-run/dev": "2.9.1",
     "@remix-run/eslint-config": "2.9.1",
     "@remix-run/testing": "2.9.1",
-    "@storybook/addon-essentials": "^8.0.9",
-    "@storybook/addon-interactions": "^8.0.9",
-    "@storybook/addon-links": "^8.0.9",
-    "@storybook/blocks": "^8.0.9",
-    "@storybook/react": "^8.0.9",
-    "@storybook/react-vite": "^8.0.9",
+    "@storybook/addon-essentials": "8.0.9",
+    "@storybook/addon-interactions": "8.0.9",
+    "@storybook/addon-links": "8.0.9",
+    "@storybook/blocks": "8.0.9",
+    "@storybook/react": "8.0.9",
+    "@storybook/react-vite": "8.0.9",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.12",
     "@testing-library/dom": "9.3.4",
@@ -119,7 +119,7 @@
     "prettier-plugin-tailwindcss": "0.5.14",
     "remix-development-tools": "4.1.4",
     "remix-flat-routes": "0.6.4",
-    "storybook": "^8.0.9",
+    "storybook": "8.0.9",
     "storybook-dark-mode": "4.0.1",
     "storybook-react-i18next": "3.0.1",
     "stylelint": "16.4.0",
