--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build-storybook": "cross-env SB=1 storybook build --test"
   },
   "dependencies": {
+    "@epic-web/cachified": "^5.1.2",
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-brands-svg-icons": "6.5.2",
     "@fortawesome/free-regular-svg-icons": "6.5.2",
@@ -38,6 +39,7 @@
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
     "isbot": "5.1.4",
+    "lru-cache": "^10.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "7.1.0",
