--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@tailwindcss/aspect-ratio": "0.4.2",
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
-    "isbot": "5.1.4",
-    "lru-cache": "^10.2.0",
+    "isbot": "5.1.5",
+    "lru-cache": "10.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "7.1.0",
@@ -79,7 +79,7 @@
     "@types/react": "18.2.79",
     "@types/react-dom": "18.2.25",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitest/coverage-v8": "1.5.1",
+    "@vitest/coverage-v8": "1.5.2",
     "autoprefixer": "10.4.19",
     "chromatic": "11.3.0",
     "cross-env": "7.0.3",
@@ -134,7 +134,7 @@
     "vite": "5.2.10",
     "vite-plugin-turbosnap": "1.0.3",
     "vite-tsconfig-paths": "4.3.2",
-    "vitest": "1.5.1"
+    "vitest": "1.5.2"
   },
   "overrides": {
     "vite": "5.2.10"
