--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build-storybook": "cross-env SB=1 storybook build --test"
   },
   "dependencies": {
-    "@epic-web/cachified": "^5.1.2",
+    "@epic-web/cachified": "5.1.2",
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-brands-svg-icons": "6.5.2",
     "@fortawesome/free-regular-svg-icons": "6.5.2",
